--- a/index.html
+++ b/index.html
@@ -374,7 +374,28 @@
             "University of California, Santa Cruz",
             "University of California, Riverside",
             "San Jose State University",
-            "California State University, Long Beach"
+            "California State University, Long Beach",
+            "University of British Columbia Vancouver",
+            "University of British Columbia Okanagan",
+            "University of Toronto",
+            "McGill University",
+            "University of Waterloo",
+            "Western University",
+            "University of Alebrta",
+            "University of Calgary",
+            "McMaster University",
+            "Simon Fraser University",
+            "University of Ottawa",
+            "University of Oxford",
+            "University of Cambridge",
+            "Imperial College London",
+            "ETH Zurich",
+            "Ecole Polytechnique Fédérale de Lausanne",
+            "University of Edinburgh",
+            "University of Manchester",
+            "King's College London",
+            "National University of Singapore",
+            "Nanyang Technological University",
         ];
 
         firebase.initializeApp(firebaseConfig);
